2006-07-15 Niklas Knutsson  <nq@altern.org>

	* Add --with-libgnome and --with-libgnomeui configure options
	* Add accelerator keys to widgets in units, functions, and variables dialogs

2006-07-14 Niklas Knutsson  <nq@altern.org>

	* Add accelerators to all dialog buttons and expanders
	* Fix set unknowns in RPN mode
	* Fix compile without libgnomeui

2006-07-03 Niklas Knutsson  <nq@altern.org>

	* Make separate options for "Sort Minus Last" and "Negative Exponents" in numerical display menu
	* Do not save equal signs for parse history and do not save "RPN Register Moved" as text
	* Do not put numerator in parenthesis in (1/2)/m, with "Place Units Separately" activated
	* Increment version number

2006-06-19 Niklas Knutsson  <nq@altern.org>

	* Use localized comma for insert matrix/vector
	* Display parentheses correctly with flat division when "Place units separately" is activated
	* Fix insert matrix/vector dialog

2006-06-10 Niklas Knutsson  <nq@altern.org>

	* Add "Engineering" display mode

2006-06-01 Niklas Knutsson  <nq@altern.org>

	* Polishing before 0.9.4 release

2006-04-28 Niklas Knutsson  <nq@altern.org>

	* Fix function editing with subfunctions

2006-04-23 Niklas Knutsson  <nq@altern.org>

	* Update documentation
	* Update Swedish translation

2006-04-21 Niklas Knutsson  <nq@altern.org>

	* Display position of current element instead of using bad headers
	* Handle empty matrices

2006-04-18 Niklas Knutsson  <nq@altern.org>

	* unit_edit_label_relation_title did not exist
	* Scroll to current matrix cell

2006-04-12 Niklas Knutsson  <nq@altern.org>

	* New matrix editing using GtkTreeView
	* Show matrix result dialog automatically for all but the smallest of matrices

2006-04-10 Niklas Knutsson  <nq@altern.org>

	* Align matrix/vector table items right
	* Remember visible tab with rpn mode on and off
	* Enhance edit matrix/vector dialog
	* Insert matrix/vector dialog
	* Insert matrix/vector menu items
	* View/edit matrix/vector popup menu item
