@@ -111,8 +111,6 @@ extern bool rpn_mode, rpn_keypad_only;
 
 GtkTooltips *periodic_tooltips, *main_tooltips;
 
-extern GdkPixbuf *icon_pixbuf;
-
 extern vector<GtkWidget*> mode_items;
 extern vector<GtkWidget*> popup_result_mode_items;
 
@@ -671,10 +669,6 @@ void create_main_window (void) {
 	if(show_history || show_keypad || (show_stack && rpn_mode)) gtk_window_resize(GTK_WINDOW(glade_xml_get_widget(main_glade, "main_window")), 1, 1);
 	else gtk_window_resize(GTK_WINDOW(glade_xml_get_widget(main_glade, "main_window")), win_width, 1);
 
-#ifndef HAVE_LIBGNOMEUI
-	gtk_window_set_icon(GTK_WINDOW(glade_xml_get_widget (main_glade, "main_window")), icon_pixbuf);
-#endif
-
 	update_status_text();
 	
 }
@@ -727,9 +721,6 @@ get_functions_dialog (void)
 
 		update_functions_tree();
 		
-#ifndef HAVE_LIBGNOMEUI
-		gtk_window_set_icon(GTK_WINDOW(glade_xml_get_widget (functions_glade, "functions_dialog")), icon_pixbuf);
-#endif
 	}
 
 	return glade_xml_get_widget (functions_glade, "functions_dialog");
@@ -784,10 +775,6 @@ get_variables_dialog (void)
 		glade_xml_signal_autoconnect(variables_glade);
 
 		update_variables_tree();
-
-#ifndef HAVE_LIBGNOMEUI
-		gtk_window_set_icon(GTK_WINDOW(glade_xml_get_widget (variables_glade, "variables_dialog")), icon_pixbuf);
-#endif
 
 	}
 	
@@ -855,10 +842,6 @@ get_units_dialog (void)
 		gtk_entry_set_alignment(GTK_ENTRY(glade_xml_get_widget (units_glade, "units_entry_from_val")), 1.0);
 		gtk_entry_set_alignment(GTK_ENTRY(glade_xml_get_widget (units_glade, "units_entry_to_val")), 1.0);
 		
-#ifndef HAVE_LIBGNOMEUI
-		gtk_window_set_icon(GTK_WINDOW(glade_xml_get_widget (units_glade, "units_dialog")), icon_pixbuf);
-#endif
-	
 	}
 	
 	return glade_xml_get_widget (units_glade, "units_dialog");
@@ -920,10 +903,6 @@ get_datasets_dialog (void)
 
 		update_datasets_tree();
 
-#ifndef HAVE_LIBGNOMEUI		
-		gtk_window_set_icon(GTK_WINDOW(glade_xml_get_widget (datasets_glade, "datasets_dialog")), icon_pixbuf);
-#endif
-		
 	}
 
 	return glade_xml_get_widget (datasets_glade, "datasets_dialog");
@@ -1575,10 +1554,6 @@ get_nbases_dialog (void)
 		
 		glade_xml_signal_autoconnect(nbases_glade);
 		
-#ifndef HAVE_LIBGNOMEUI
-		gtk_window_set_icon(GTK_WINDOW(glade_xml_get_widget (nbases_glade, "nbases_dialog")), icon_pixbuf);
-#endif
-	
 	}
 
 	return glade_xml_get_widget (nbases_glade, "nbases_dialog");
@@ -1620,10 +1595,6 @@ GtkWidget* get_about_dialog (void) {
 		
 		glade_xml_signal_autoconnect(about_glade);
 		
-#ifndef HAVE_LIBGNOMEUI
-		gtk_window_set_icon(GTK_WINDOW(glade_xml_get_widget (about_glade, "about_dialog")), icon_pixbuf);
-#endif
-	
 	}
 
 	return glade_xml_get_widget (about_glade, "about_dialog");
@@ -1692,10 +1663,6 @@ GtkWidget* get_plot_dialog (void) {
 
 		glade_xml_signal_autoconnect(plot_glade);
 		
-#ifndef HAVE_LIBGNOMEUI
-		gtk_window_set_icon(GTK_WINDOW(glade_xml_get_widget (plot_glade, "plot_dialog")), icon_pixbuf);
-#endif
-	
 	}
 		
 	return glade_xml_get_widget (plot_glade, "plot_dialog");		
@@ -1914,10 +1881,6 @@ GtkWidget* get_periodic_dialog (void) {
 			}
 		}
 		
-#ifndef HAVE_LIBGNOMEUI
-		gtk_window_set_icon(GTK_WINDOW(glade_xml_get_widget (periodictable_glade, "periodic_dialog")), icon_pixbuf);
-#endif
-	
 	}
 
 	return glade_xml_get_widget (periodictable_glade, "periodic_dialog");
